welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: ';' expected but '<-' found.
  T(i)<-getCouleurSol()
      ^